# Naavimac

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt
app/include/app/: const.hpp  main.hpp
app/shaders/: colorCube.fs.glsl  colorCube.vs.glsl  lightCube.fs.glsl  select.fs.glsl  select.vs.glsl  selectionCube.gs.glsl  selectionCube.vs.glsl  smallCube.fs.glsl  smallCube.vs.glsl  texturedCube.fs.glsl  texturedCube.vs.glsl
app/src/: main.cpp  template_imgui  template_imgui.cpp
assets/controlPoints/: cp1.txt  cp10.txt  cp2.txt  cp3.txt  cp4.txt  cp5.txt  cp6.txt  cp7.txt  cp8.txt  cp9.txt
doc/: CMakeLists.txt  Doxyfile-html.cmake
doc/rapport/: report.md
doc/rapport/uml/: plantuml_CubeList.txt  plantuml_Primitives.txt
doc/report/: report.md
doc/report/uml/: plantuml_CubeList.txt  plantuml_Instance.txt  plantuml_Primitives.txt
lib/glimac/include/glimac/cam/: FreeflyCamera.hpp  TrackballCamera.hpp
lib/glimac/src/cam/: FreeflyCamera.cpp  TrackballCamera.cpp
lib/glimac/src/common/: ColorCubeInst.cpp  CubeList.cpp  FileHandling.cpp  Image.cpp  Instance.cpp  Instances.cpp  LightCubeInst.cpp  Lighting.cpp  Object.cpp  Scene.cpp  ShapeVertex.cpp  TexturedCubeInst.cpp  VertexArray.cpp  math.cpp
lib/glimac/src/gui/: IMGUIWindowManager.cpp  Mouse.cpp  SDLWindowManager.cpp  UIWindows.cpp
lib/glimac/src/others/: Geometry.cpp  tiny_obj_loader.cpp
lib/glimac/src/primitives/: Cone.cpp  Cube.cpp  CubeEdges.cpp  Line.cpp  Primitive.cpp  Sphere.cpp
lib/glimac/src/rbf/: Rbf.cpp
lib/glimac/src/shading/: Program.cpp  Shader.cpp  ShadingProgram.cpp
(+33 files in other folders)
