file(GLOB_RECURSE HEADER_FILES *.hpp)
file(GLOB_RECURSE SRC_FILES *.cpp)
file(GLOB_RECURSE SHADER_FILES *.glsl)


set(EXECUTABLE_OUTPUT_PATH ../bin/${CMAKE_BUILD_TYPE})
add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES} ${SHADER_FILES})
target_link_libraries(${PROJECT_NAME} ${ALL_LIBRARIES})

file(COPY shaders DESTINATION ../bin/${CMAKE_BUILD_TYPE})